src/styles/stuff/_menu.scss
.menu {

  &__toggle {
    opacity: 0;
    position: absolute;
    top: -100%;

    @include desktopAdapt {
      display: none;
    }
  }

  &__span,
  &__span::before,
  &__span::after {
    display: block;
    position: absolute;

    width: 100%;
    height: 4px;

    background-color: $cWhite;

    transition-duration: 0.3s;
  }

  &__span::before {
    content: "";
    top: -8px;
  }

  &__span::after {
    content: "";
    top: 8px;
  }

  &__toggle:checked ~ &__btn > &__span {
    transform: rotate(45deg);
  }

  &__toggle:checked ~ &__btn > &__span::before {
    top: 0;
    transform: rotate(0);
  }

  &__toggle:checked ~ &__btn > &__span::after {
    top: 0;
    transform: rotate(90deg);
  }

  &__btn {
    display: block;
    position: relative;
    margin: 20px auto 0;

    width: 40px;
    height: 30px;

    cursor: pointer;
    z-index: 1;

    @include desktopAdapt {
      display: none;
    }
  }
}

